# xagent

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  EVOLUTION_JOURNEY.md  README.md  cliff.toml
.claude/skills/work-on-issue/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/xagent-brain/: Cargo.toml  README.md
crates/xagent-brain/src/: action.rs  async_readback.rs  brain.rs  buffers.rs  capacity.rs  encoder.rs  gpu_brain.rs  gpu_kernel.rs  gpu_mega_kernel.rs  gpu_physics.rs  habituation.rs  homeostasis.rs  lib.rs  memory.rs  motor_fatigue.rs  predictor.rs
crates/xagent-brain/src/shaders/: agent_grid_build.wgsl  collision_accumulate.wgsl  collision_apply.wgsl  encode.wgsl  feature_extract.wgsl  food_detect.wgsl  food_grid_build.wgsl  food_respawn.wgsl  habituate_homeo.wgsl  learn_and_store.wgsl  physics.wgsl  predict_and_act.wgsl  recall_score.wgsl  recall_topk.wgsl  vision.wgsl
crates/xagent-brain/src/shaders/kernel/: bitonic_sort_subgroup.wgsl  brain_passes.wgsl  brain_tick.wgsl  common.wgsl  global_tick.wgsl  kernel_tick.wgsl  phase_agent_grid.wgsl  phase_collision.wgsl  phase_death.wgsl  phase_food_detect.wgsl  phase_food_respawn.wgsl  phase_physics.wgsl  phase_prepare_dispatch.wgsl  phase_vision.wgsl  vision_tick.wgsl
crates/xagent-brain/src/shaders/mega/: brain_tick.wgsl  common.wgsl  global_tick.wgsl  mega_tick.wgsl  phase_brain.wgsl  phase_clear.wgsl  phase_death.wgsl  phase_food_detect.wgsl  phase_food_grid.wgsl  phase_physics.wgsl  phase_vision.wgsl  physics_tick.wgsl  physics_vision_tick.wgsl
crates/xagent-sandbox/: Cargo.toml  README.md
crates/xagent-sandbox/src/: app.rs  bench.rs  compute_backend.rs  evolution.rs  governor.rs  gpu_compute.rs  gpu_orchestration.rs  headless.rs  lib.rs  main.rs  momentum.rs  overlay.rs  recording.rs  render_pipeline.rs  replay.rs  snapshot.rs  ui.rs
crates/xagent-sandbox/src/agent/: mod.rs  senses.rs
crates/xagent-sandbox/src/physics/: mod.rs
crates/xagent-sandbox/src/renderer/: camera.rs  font.rs  hud.rs  mod.rs
crates/xagent-sandbox/src/world/: biome.rs  entity.rs  mod.rs  spatial.rs  terrain.rs
crates/xagent-sandbox/tests/: integration.rs
crates/xagent-shared/: Cargo.toml  README.md
crates/xagent-shared/src/: body.rs  config.rs  lib.rs  motor.rs  sensory.rs  traits.rs
docs/reviews/: 2026-04-15-gemini-31-pro.md  2026-04-15-gpt-54-high.md
docs/superpowers/plans/: 2026-03-31-brain-reunification.md  2026-04-01-anti-loop-mechanisms.md  2026-04-01-directed-mutations.md  2026-04-01-evolvable-anti-loop.md  2026-04-01-sandbox-tab-overhaul.md  2026-04-02-fix-evolution.md  2026-04-03-episodic-motor-memory.md  2026-04-04-performance-optimization.md  2026-04-05-gpu-kernel.md  2026-04-05-gpu-mega-kernel.md  2026-04-06-gpu-compute-optimizations.md  2026-04-06-vision-stride-kernel.md  2026-04-06-vision-stride-mega-kernel.md  2026-04-12-dynamic-vision-dimensions.md
docs/superpowers/specs/: 2026-04-01-anti-loop-mechanisms-design.md  2026-04-01-directed-mutations-design.md  2026-04-01-evolvable-anti-loop-design.md  2026-04-02-fix-evolution-design.md  2026-04-03-ci-cd-pipelines-design.md  2026-04-03-episodic-motor-memory-design.md  2026-04-04-performance-optimization-design.md  2026-04-05-gpu-kernel-design.md  2026-04-05-gpu-mega-kernel-design.md  2026-04-06-gpu-compute-optimizations-design.md  2026-04-06-vision-stride-kernel-design.md  2026-04-06-vision-stride-mega-kernel-design.md  2026-04-13-tick-accumulator-backpressure-design.md  2026-04-21-credit-assignment-audit.md
