[workspace]
members = [
    "crates/xagent-shared",
    "crates/xagent-brain",
    "crates/xagent-sandbox",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
glam = { version = "0.29", features = ["serde"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1", features = ["derive"] }
rayon = "1.10"
