[workspace]
members = [
    "crates/xagent-shared",
    "crates/xagent-brain",
    "crates/xagent-sandbox",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Selectively allow lints that are too noisy for the current codebase.
# Remove these one-by-one as code is cleaned up (see CONTRIBUTING.md).
module_name_repetitions = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
inline_always = "allow"
wildcard_imports = "allow"
items_after_statements = "allow"
needless_range_loop = "allow"
needless_raw_string_hashes = "allow"
needless_pass_by_value = "allow"
used_underscore_binding = "allow"
default_trait_access = "allow"
field_reassign_with_default = "allow"
bool_to_int_with_if = "allow"
manual_midpoint = "allow"
manual_let_else = "allow"
manual_is_multiple_of = "allow"
manual_div_ceil = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
single_match_else = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
unnecessary_map_or = "allow"
semicolon_if_nothing_returned = "allow"
explicit_iter_loop = "allow"
float_cmp = "allow"
type_complexity = "allow"
struct_excessive_bools = "allow"
many_single_char_names = "allow"
collapsible_if = "allow"
collapsible_else_if = "allow"
if_not_else = "allow"
redundant_closure_for_method_calls = "allow"
single_component_path_imports = "allow"
unreadable_literal = "allow"
elidable_lifetime_names = "allow"
stable_sort_primitive = "allow"
pub_underscore_fields = "allow"
# Correctness and suspicious lints stay at default (deny/warn).

[workspace.dependencies]
glam = { version = "0.29", features = ["serde"] }
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1", features = ["derive"] }
rayon = "1.10"
