[package]
name = "xagent-brain"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
xagent-shared = { path = "../xagent-shared" }
glam = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
wgpu = "24"
bytemuck = { workspace = true }
pollster = "0.4"
